FIX: Fixes Anchors on Small Mobile Devices

--- a/styles.css
+++ b/styles.css
@@ -71,7 +71,7 @@ header a:hover {
 	background-color: var(--pink);
 	border: 1px solid transparent;
 	border-radius: 2rem;
-	padding: 1.1rem 4rem;
+	padding: 1.1rem 0.5rem;
 	text-transform: capitalize;
 	-webkit-box-shadow: 0px 0px 9px -2px var(--pink);
 	box-shadow: 0px 0px 9px -2px var(--pink);
@@ -181,7 +181,7 @@ header a:hover {
 	background-color: var(--pink);
 	border: 1px solid transparent;
 	border-radius: 2rem;
-	padding: 1.1rem 4rem;
+	padding: 1.1rem 0.5rem;
 	text-transform: capitalize;
 	-webkit-box-shadow: 0px 0px 9px -2px var(--pink);
 	box-shadow: 0px 0px 9px -2px var(--pink);
